added some code to separate links in swagger
