# routes/owners.js
@@ -2,16 +2,38 @@ const routes = require('express').Router();
 const controllers = require('../controllers/owner')
 const regValidate = require('../utilities/validate')
 
-routes.get('/', controllers.getAllOwners)
-routes.post('/', 
-regValidate.ownerRules(), 
-regValidate.checkOwnerData,
-controllers.addNewOwner)
-routes.get('/:id', controllers.getSingleOwner)
-routes.put('/:id',
-regValidate.ownerRules(), 
-regValidate.checkOwnerData, 
-controllers.updateOwner)
-routes.delete('/:id', controllers.deleteOwner)
+routes.get('/', (req, res) => {
+/*
+#swagger.tags = ['Owners']
+*/
+controllers.getAllOwners(req, res);
+});
+
+routes.post('/', regValidate.ownerRules(), regValidate.checkOwnerData, (req, res) => {
+/*
+#swagger.tags = ['Owners']
+*/
+controllers.addNewOwner
+});
+
+routes.get('/:id', (req, res) => {
+/*
+#swagger.tags = ['Owners']
+*/
+    controllers.getSingleOwner
+});
+routes.put('/:id', regValidate.ownerRules(), regValidate.checkOwnerData, (req, res) => {
+/*
+#swagger.tags = ['Owners']
+*/
+controllers.updateOwner
+});
+
+routes.delete('/:id', (req, res) => {
+/*
+#swagger.tags = ['Owners']
+*/
+controllers.deleteOwner
+});
 
 module.exports = routes
